--- a/src/main/resources/com/example/soberdn/SecondSober.fxml
+++ b/src/main/resources/com/example/soberdn/SecondSober.fxml
@@ -2,16 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/17.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.FxmlCreatesSoberSecondScreen">
+<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" stylesheets="@../../../../java/com/example/soberdn/css/stylesheet.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.FxmlCreatesSoberSecondScreen">
    <children>
-      <HBox prefHeight="109.0" prefWidth="1087.0" stylesheets="@stylesheet.css">
+      <HBox prefHeight="109.0" prefWidth="1099.0" stylesheets="/com/example/soberdn/css/stylesheet.css">
          <children>
-            <VBox fx:id="vbox1" alignment="CENTER" prefHeight="109.0" prefWidth="1089.0" style="-fx-background-color: #6699ff;">
+            <VBox fx:id="vbox1" alignment="CENTER" prefHeight="109.0" prefWidth="1128.0" style="-fx-background-color: #6699ff;">
                <children>
                   <Label fx:id="label1" prefHeight="61.0" prefWidth="366.0" text="Hallo Stefan" textOverrun="CLIP">
                      <font>
@@ -34,5 +36,19 @@
                </font></Button>
          </children>
       </HBox>
+      <VBox layoutX="462.0" layoutY="153.0" prefHeight="377.0" prefWidth="215.0" spacing="30.0">
+         <children>
+            <ImageView fitHeight="201.0" fitWidth="244.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../coin-royalty-free-stock-photography-illustration-gold-coin.png" />
+               </image>
+            </ImageView>
+            <Label alignment="CENTER" prefHeight="111.0" prefWidth="246.0" text="Balance">
+               <font>
+                  <Font size="46.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
