--- a/src/main/resources/com/example/soberdn/SecondSober.fxml
+++ b/src/main/resources/com/example/soberdn/SecondSober.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" stylesheets="@../../../../java/com/example/soberdn/css/stylesheet.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.FxmlCreatesSoberSecondScreen">
+<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" style="-fx-background-color: #80aaff;" stylesheets="@../../../../java/com/example/soberdn/css/stylesheet.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.FxmlCreatesSoberSecondScreen">
    <children>
       <HBox prefHeight="109.0" prefWidth="1099.0" stylesheets="/com/example/soberdn/css/stylesheet.css">
          <children>
             <VBox fx:id="vbox1" alignment="CENTER" prefHeight="109.0" prefWidth="1128.0" style="-fx-background-color: #6699ff;">
                <children>
-                  <Label fx:id="label1" prefHeight="61.0" prefWidth="366.0" text="Hallo Stefan" textOverrun="CLIP">
+                  <Label fx:id="label1" prefHeight="61.0" prefWidth="366.0" text="Hallo Stefan">
                      <font>
                         <Font name="Hiragino Sans W2" size="60.0" />
                      </font>
@@ -26,13 +26,13 @@
       </HBox>
       <HBox fx:id="vbox2" layoutX="-8.0" layoutY="554.0" prefHeight="120.0" prefWidth="1108.0" spacing="400.0" style="-fx-background-color: #6699ff;">
          <children>
-            <Button fx:id="button1" mnemonicParsing="false" onAction="#onAction1" prefHeight="129.0" prefWidth="372.0" style="-fx-background-color: #6699ff;" text="QR-Code">
+            <Button fx:id="button1" mnemonicParsing="false" onAction="#onAction1" onMouseEntered="#doThis2" onMouseExited="#doThat2" prefHeight="129.0" prefWidth="372.0" style="-fx-background-color: #6699ff;" text="QR-Code">
                <font>
-                  <Font size="46.0" />
+                  <Font name="Hiragino Sans W2" size="46.0" />
                </font></Button>
-            <Button fx:id="button2" mnemonicParsing="false" onAction="#onAction2" onMouseEntered="#doThis" onMouseExited="#doThat" prefHeight="117.0" prefWidth="339.0" style="-fx-background-color: #6699ff;" text="Buy Drinks">
+            <Button fx:id="button2" mnemonicParsing="false" onAction="#onAction2" onMouseEntered="#doThis" onMouseExited="#doThat" prefHeight="117.0" prefWidth="339.0" style="-fx-background-color: #6699ff;" text="Shop">
                <font>
-                  <Font size="46.0" />
+                  <Font name="Hiragino Sans W2" size="46.0" />
                </font></Button>
          </children>
       </HBox>
@@ -43,9 +43,9 @@
                   <Image url="@../../../coin-royalty-free-stock-photography-illustration-gold-coin.png" />
                </image>
             </ImageView>
-            <Label alignment="CENTER" prefHeight="111.0" prefWidth="246.0" text="Balance">
+            <Label alignment="CENTER" prefHeight="111.0" prefWidth="246.0" text="0">
                <font>
-                  <Font size="46.0" />
+                  <Font name="Hiragino Sans W2" size="46.0" />
                </font>
             </Label>
          </children>
