--- a/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
+++ b/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.SoberQrCodeScreen">
+<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" style="-fx-background-color: #80aaff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.SoberQrCodeScreen">
    <children>
       <VBox fx:id="vBox" layoutX="401.0" layoutY="192.0" prefHeight="257.0" prefWidth="299.0">
          <children>
@@ -23,26 +23,26 @@
       </VBox>
       <HBox fx:id="hBox" prefHeight="100.0" prefWidth="1092.0" style="-fx-background-color: #6699ff;">
          <children>
-            <Label fx:id="label1" alignment="CENTER" prefHeight="100.0" prefWidth="1092.0" text="QR-Code">
+            <Label fx:id="label1" alignment="CENTER" prefHeight="109.0" prefWidth="1128.0" text="QR-Code">
                <opaqueInsets>
                   <Insets left="400.0" />
                </opaqueInsets>
                <font>
-                  <Font size="52.0" />
+                  <Font name="Hiragino Sans W2" size="60.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <HBox fx:id="hBox1" layoutY="571.0" prefHeight="106.0" prefWidth="1092.0" spacing="600.0" style="-fx-background-color: #6699ff;">
+      <HBox fx:id="hBox1" layoutY="571.0" prefHeight="120.0" prefWidth="1108.0" spacing="600.0" style="-fx-background-color: #6699ff;">
          <children>
-            <Button fx:id="buttonBalance" mnemonicParsing="false" onAction="#goBack" prefHeight="108.0" prefWidth="237.0" style="-fx-background-color: #6699ff;" text="Balance">
+            <Button fx:id="buttonBalance" mnemonicParsing="false" onAction="#goBack" onMouseEntered="#doThis" onMouseExited="#doThat" prefHeight="106.0" prefWidth="482.0" style="-fx-background-color: #6699ff;" text="Balance">
                <font>
-                  <Font size="36.0" />
+                  <Font name="Hiragino Sans W2" size="46.0" />
                </font>
             </Button>
-            <Button fx:id="buttonShop" mnemonicParsing="false" prefHeight="110.0" prefWidth="298.0" style="-fx-background-color: #6699ff;" text="Shop">
+            <Button fx:id="buttonShop" mnemonicParsing="false" onMouseEntered="#doThis2" onMouseExited="#doThat2" prefHeight="106.0" prefWidth="494.0" style="-fx-background-color: #6699ff;" text="Shop">
                <font>
-                  <Font size="36.0" />
+                  <Font name="Hiragino Sans W2" size="46.0" />
                </font>
             </Button>
          </children>
