--- a/src/main/resources/com/example/soberdn/BarScreen.fxml
+++ b/src/main/resources/com/example/soberdn/BarScreen.fxml
@@ -4,18 +4,35 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="670.0" prefWidth="1088.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.Bar.BarScreen">
+<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.Bar.BarScreen">
    <children>
-      <VBox prefHeight="673.0" prefWidth="201.0" style="-fx-background-color: #6699ff;">
+      <VBox fx:id="vBox" prefHeight="673.0" prefWidth="201.0" style="-fx-background-color: #6699ff;">
          <children>
-            <Button mnemonicParsing="false" prefHeight="92.0" prefWidth="201.0" style="-fx-background-color: #4d88ff;" text="Menu" />
-            <Button mnemonicParsing="false" prefHeight="70.0" prefWidth="210.0" style="-fx-background-color: #6699ff;" text="Age Check" />
-            <Button mnemonicParsing="false" prefHeight="70.0" prefWidth="219.0" style="-fx-background-color: #6699ff;" text="QR-Code Scan " />
-            <Button mnemonicParsing="false" prefHeight="70.0" prefWidth="218.0" style="-fx-background-color: #6699ff;" text="History" />
+            <Button fx:id="buttonMenu" mnemonicParsing="false" prefHeight="92.0" prefWidth="201.0" style="-fx-background-color: #1a66ff;" text="Menu">
+               <font>
+                  <Font name="Hiragino Sans W2" size="40.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonAdd" mnemonicParsing="false" onMouseEntered="#dark1" onMouseExited="#light1" prefHeight="70.0" prefWidth="210.0" style="-fx-background-color: #6699ff;" text="Age Check">
+               <font>
+                  <Font name="Hiragino Sans W2" size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonQrScan" mnemonicParsing="false" onMouseEntered="#dark2" onMouseExited="#light2" prefHeight="70.0" prefWidth="219.0" style="-fx-background-color: #6699ff;" text="QR-Code Scan ">
+               <font>
+                  <Font name="Hiragino Sans W2" size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonHistory" mnemonicParsing="false" onMouseEntered="#dark3" onMouseExited="#light3" prefHeight="70.0" prefWidth="218.0" style="-fx-background-color: #6699ff;" text="History">
+               <font>
+                  <Font name="Hiragino Sans W2" size="20.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
-      <HBox layoutX="201.0" prefHeight="92.0" prefWidth="888.0" style="-fx-background-color: #3377ff;" />
+      <HBox fx:id="hBox" layoutX="201.0" prefHeight="92.0" prefWidth="888.0" style="-fx-background-color: #3377ff;" />
    </children>
 </AnchorPane>
