--- a/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
+++ b/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
@@ -14,11 +14,8 @@
    <children>
       <VBox fx:id="vBox" layoutX="401.0" layoutY="192.0" prefHeight="257.0" prefWidth="299.0">
          <children>
-            <ImageView fx:id="imageView" fitHeight="301.0" fitWidth="477.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@qrcodes/coin-blabla.png" />
-               </image>
-            </ImageView>
+            <ImageView fx:id="imageView" fitHeight="301.0" fitWidth="477.0" pickOnBounds="true"
+              preserveRatio="true"/>
          </children>
       </VBox>
       <HBox fx:id="hBox" prefHeight="100.0" prefWidth="1092.0" style="-fx-background-color: #6699ff;">
