--- a/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
+++ b/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
@@ -3,46 +3,53 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
-<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" style="-fx-background-color: #80aaff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.SoberQrCodeScreen">
-   <children>
-      <VBox fx:id="vBox" layoutX="401.0" layoutY="192.0" prefHeight="257.0" prefWidth="299.0">
-         <children>
-            <ImageView fx:id="imageView" fitHeight="301.0" fitWidth="477.0" pickOnBounds="true"
-              preserveRatio="true"/>
-         </children>
-      </VBox>
-      <HBox fx:id="hBox" prefHeight="100.0" prefWidth="1092.0" style="-fx-background-color: #6699ff;">
-         <children>
-            <Label fx:id="label1" alignment="CENTER" prefHeight="109.0" prefWidth="1128.0" text="QR-Code">
-               <opaqueInsets>
-                  <Insets left="400.0" />
-               </opaqueInsets>
-               <font>
-                  <Font name="Hiragino Sans W2" size="60.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-      <HBox fx:id="hBox1" layoutY="571.0" prefHeight="120.0" prefWidth="1108.0" spacing="600.0" style="-fx-background-color: #6699ff;">
-         <children>
-            <Button fx:id="buttonBalance" mnemonicParsing="false" onAction="#goBack" onMouseEntered="#doThis" onMouseExited="#doThat" prefHeight="106.0" prefWidth="482.0" style="-fx-background-color: #6699ff;" text="Balance">
-               <font>
-                  <Font name="Hiragino Sans W2" size="46.0" />
-               </font>
-            </Button>
-            <Button fx:id="buttonShop" mnemonicParsing="false" onMouseEntered="#doThis2" onMouseExited="#doThat2" prefHeight="106.0" prefWidth="494.0" style="-fx-background-color: #6699ff;" text="Shop">
-               <font>
-                  <Font name="Hiragino Sans W2" size="46.0" />
-               </font>
-            </Button>
-         </children>
-      </HBox>
-   </children>
+<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0"
+  style="-fx-background-color: #80aaff;" xmlns="http://javafx.com/javafx/19"
+  xmlns:fx="http://javafx.com/fxml/1"
+  fx:controller="com.example.soberdn.javafx.controllers.SoberQrCodeScreen">
+  <children>
+    <VBox fx:id="vBox" layoutX="401.0" layoutY="192.0" prefHeight="257.0" prefWidth="299.0">
+      <children>
+        <ImageView fx:id="imageView" fitHeight="301.0" fitWidth="477.0" pickOnBounds="true"
+          preserveRatio="true"/>
+      </children>
+    </VBox>
+    <HBox fx:id="hBox" prefHeight="100.0" prefWidth="1092.0" style="-fx-background-color: #6699ff;">
+      <children>
+        <Label fx:id="label1" alignment="CENTER" prefHeight="109.0" prefWidth="1128.0"
+          text="QR-Code">
+          <opaqueInsets>
+            <Insets left="400.0"/>
+          </opaqueInsets>
+          <font>
+            <Font name="Hiragino Sans W2" size="60.0"/>
+          </font>
+        </Label>
+      </children>
+    </HBox>
+    <HBox fx:id="hBox1" layoutY="571.0" prefHeight="120.0" prefWidth="1108.0" spacing="600.0"
+      style="-fx-background-color: #6699ff;">
+      <children>
+        <Button fx:id="buttonBalance" mnemonicParsing="false" onAction="#goBack"
+          onMouseEntered="#doThis" onMouseExited="#doThat" prefHeight="106.0" prefWidth="482.0"
+          style="-fx-background-color: #6699ff;" text="Balance">
+          <font>
+            <Font name="Hiragino Sans W2" size="46.0"/>
+          </font>
+        </Button>
+        <Button fx:id="buttonShop" mnemonicParsing="false" onMouseEntered="#doThis2"
+          onMouseExited="#doThat2" prefHeight="106.0" prefWidth="494.0"
+          style="-fx-background-color: #6699ff;" text="Shop">
+          <font>
+            <Font name="Hiragino Sans W2" size="46.0"/>
+          </font>
+        </Button>
+      </children>
+    </HBox>
+  </children>
 </AnchorPane>
