--- a/src/main/resources/com/example/soberdn/LoginScreen.fxml
+++ b/src/main/resources/com/example/soberdn/LoginScreen.fxml
@@ -4,26 +4,26 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="anch" prefHeight="670.0" prefWidth="1088.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.Bar.LoginScreen">
+<AnchorPane fx:id="anch" prefHeight="670.0" prefWidth="1088.0" style="-fx-background-color: #ffffcc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.Bar.LoginScreen">
    <children>
       <VBox fx:id="vBox" layoutX="-2.0" prefHeight="92.0" prefWidth="213.0" style="-fx-background-color: #6699ff;">
          <children>
-            <Button fx:id="buttonMenu" mnemonicParsing="false" prefHeight="93.0" prefWidth="218.0" style="-fx-background-color: #1a66ff;" text="Login">
+            <Button fx:id="buttonMenu" mnemonicParsing="false" prefHeight="93.0" prefWidth="218.0" style="-fx-background-color: #80bfff;" text="Login">
                <font>
                   <Font name="Hiragino Sans W2" size="40.0" />
                </font>
             </Button>
          </children>
       </VBox>
-      <HBox fx:id="hBox" layoutX="211.0" layoutY="-1.0" prefHeight="94.0" prefWidth="888.0" style="-fx-background-color: #3377ff;" />
-      <AnchorPane fx:id="blur" layoutX="479.0" layoutY="241.0" prefHeight="165.0" prefWidth="150.0" style="-fx-background-color: #3377ff;">
+      <HBox fx:id="hBox" layoutX="211.0" layoutY="-1.0" prefHeight="94.0" prefWidth="888.0" style="-fx-background-color: #99ccff;" />
+      <AnchorPane fx:id="blur" layoutX="483.0" layoutY="217.0" prefHeight="271.0" prefWidth="244.0" style="-fx-background-color: #99ccff;">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor>
@@ -31,15 +31,26 @@
             <BoxBlur iterations="2" />
          </effect>
       </AnchorPane>
-      <VBox layoutX="447.0" layoutY="215.0" prefHeight="273.0" prefWidth="214.0" spacing="20.0">
+      <VBox fx:id="vBox" layoutX="441.0" layoutY="179.0" prefHeight="358.0" prefWidth="297.0" spacing="20.0">
          <children>
             <RadioButton fx:id="radio1" mnemonicParsing="false" onAction="#click1" text="User" />
             <RadioButton fx:id="radio2" mnemonicParsing="false" onAction="#click2" text="Bar" />
-            <Button fx:id="buttonContinue" mnemonicParsing="false" prefHeight="21.0" prefWidth="94.0" style="-fx-background-color: #3377ff;" text="Continue" />
+            <TextField fx:id="textUsername" opacity="0.7" prefHeight="26.0" prefWidth="216.0" text="Username">
+               <VBox.margin>
+                  <Insets right="40.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="textPassword" opacity="0.7" prefHeight="26.0" prefWidth="27.0" text="Password">
+               <VBox.margin>
+                  <Insets right="40.0" />
+               </VBox.margin>
+            </TextField>
+            <Button fx:id="buttonContinue" mnemonicParsing="false" onAction="#clickContinue" prefHeight="26.0" prefWidth="199.0" style="-fx-background-color: #99ccff;" text="Continue" />
          </children>
          <padding>
             <Insets left="60.0" top="60.0" />
          </padding>
       </VBox>
+      <VBox fx:id="vBox10" layoutX="-5.0" layoutY="92.0" prefHeight="580.0" prefWidth="217.0" style="-fx-background-color: #99ccff;" />
    </children>
 </AnchorPane>
