login logic naive

--- a/src/main/resources/com/example/soberdn/LoginScreen.fxml
+++ b/src/main/resources/com/example/soberdn/LoginScreen.fxml
@@ -11,9 +11,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.PasswordField?>
 <AnchorPane fx:id="anch" prefHeight="670.0" prefWidth="1088.0" style="-fx-background-color: #ffffcc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.Bar.LoginScreen">
    <children>
-      <VBox fx:id="vBox" layoutX="-2.0" prefHeight="92.0" prefWidth="213.0" style="-fx-background-color: #6699ff;">
+      <VBox fx:id="vBox1" layoutX="-2.0" prefHeight="92.0" prefWidth="213.0" style="-fx-background-color: #6699ff;">
          <children>
             <Button fx:id="buttonMenu" mnemonicParsing="false" prefHeight="93.0" prefWidth="218.0" style="-fx-background-color: #80bfff;" text="Login">
                <font>
@@ -33,18 +34,18 @@
       </AnchorPane>
       <VBox fx:id="vBox" layoutX="441.0" layoutY="179.0" prefHeight="358.0" prefWidth="297.0" spacing="20.0">
          <children>
-            <RadioButton fx:id="radio1" mnemonicParsing="false" onAction="#click1" text="User" />
+            <RadioButton fx:id="radio1" mnemonicParsing="false" onAction="#click1" selected="true" text="User" />
             <RadioButton fx:id="radio2" mnemonicParsing="false" onAction="#click2" text="Bar" />
-            <TextField fx:id="textUsername" opacity="0.7" prefHeight="26.0" prefWidth="216.0" text="Username">
+            <TextField fx:id="textUsername" opacity="0.7" prefHeight="26.0" prefWidth="216.0" promptText="Username">
                <VBox.margin>
                   <Insets right="40.0" />
                </VBox.margin>
             </TextField>
-            <TextField fx:id="textPassword" opacity="0.7" prefHeight="26.0" prefWidth="27.0" text="Password">
+            <PasswordField fx:id="textPassword" opacity="0.7" prefHeight="26.0" prefWidth="27.0" promptText="Password">
                <VBox.margin>
                   <Insets right="40.0" />
                </VBox.margin>
-            </TextField>
+            </PasswordField>
             <Button fx:id="buttonContinue" mnemonicParsing="false" onAction="#clickContinue" prefHeight="26.0" prefWidth="199.0" style="-fx-background-color: #99ccff;" text="Continue" />
          </children>
          <padding>
