--- a/src/main/resources/com/example/soberdn/SecondSober.fxml
+++ b/src/main/resources/com/example/soberdn/SecondSober.fxml
@@ -41,7 +41,7 @@
       </VBox>
       <VBox fx:id="vbox1" alignment="CENTER" layoutX="216.0" prefHeight="94.0" prefWidth="933.0" style="-fx-background-color: #99ccff;">
          <children>
-            <Label fx:id="label1" prefHeight="61.0" prefWidth="366.0" text="Hallo Stefan">
+            <Label fx:id="label1" prefHeight="61.0" prefWidth="366.0" text="Hallo {user}">
                <font>
                   <Font name="Hiragino Sans W2" size="60.0" />
                </font>
