--- a/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
+++ b/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
@@ -8,48 +8,40 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0"
-  style="-fx-background-color: #80aaff;" xmlns="http://javafx.com/javafx/19"
-  xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="com.example.soberdn.javafx.controllers.SoberQrCodeScreen">
+
+<AnchorPane fx:id="anchorPane" prefHeight="670.0" prefWidth="1088.0" style="-fx-background-color: #ffffcc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.SoberQrCodeScreen">
   <children>
-    <VBox fx:id="vBox" layoutX="401.0" layoutY="192.0" prefHeight="257.0" prefWidth="299.0">
+    <VBox fx:id="vBox" layoutX="492.0" layoutY="192.0" prefHeight="257.0" prefWidth="299.0">
       <children>
-        <ImageView fx:id="imageView" fitHeight="301.0" fitWidth="477.0" pickOnBounds="true"
-          preserveRatio="true"/>
+        <ImageView fx:id="imageView" fitHeight="301.0" fitWidth="322.0" pickOnBounds="true" preserveRatio="true" />
       </children>
     </VBox>
-    <HBox fx:id="hBox" prefHeight="100.0" prefWidth="1092.0" style="-fx-background-color: #6699ff;">
+    <HBox fx:id="hBox" layoutX="160.0" prefHeight="100.0" prefWidth="948.0" style="-fx-background-color: #6699ff;">
       <children>
-        <Label fx:id="label1" alignment="CENTER" prefHeight="109.0" prefWidth="1128.0"
-          text="QR-Code">
+        <Label fx:id="label1" alignment="CENTER" prefHeight="103.0" prefWidth="948.0" style="-fx-background-color: #99ccff;" text="QR-Code">
           <opaqueInsets>
-            <Insets left="400.0"/>
+            <Insets left="400.0" />
           </opaqueInsets>
           <font>
-            <Font name="Hiragino Sans W2" size="60.0"/>
+            <Font name="Hiragino Sans W2" size="60.0" />
           </font>
         </Label>
       </children>
     </HBox>
-    <HBox fx:id="hBox1" layoutY="571.0" prefHeight="120.0" prefWidth="1108.0" spacing="600.0"
-      style="-fx-background-color: #6699ff;">
-      <children>
-        <Button fx:id="buttonBalance" mnemonicParsing="false" onAction="#goBack"
-          onMouseEntered="#doThis" onMouseExited="#doThat" prefHeight="106.0" prefWidth="482.0"
-          style="-fx-background-color: #6699ff;" text="Balance">
+    <HBox fx:id="hBox1" layoutX="-3.0" layoutY="-5.0" prefHeight="105.0" prefWidth="169.0" spacing="600.0" style="-fx-background-color: #80bfff;" />
+      <VBox layoutX="-1.0" layoutY="99.0" prefHeight="592.0" prefWidth="167.0" style="-fx-background-color: #99ccff;">
+         <children>
+        <Button fx:id="buttonBalance" mnemonicParsing="false" onAction="#goBack" onMouseEntered="#doThis" onMouseExited="#doThat" prefHeight="106.0" prefWidth="482.0" style="-fx-background-color: #99ccff;" text="Balance">
           <font>
-            <Font name="Hiragino Sans W2" size="46.0"/>
+            <Font name="Hiragino Sans W2" size="30.0" />
           </font>
         </Button>
-        <Button fx:id="buttonShop" mnemonicParsing="false" onMouseEntered="#doThis2"
-          onMouseExited="#doThat2" prefHeight="106.0" prefWidth="494.0"
-          style="-fx-background-color: #6699ff;" text="Shop">
+        <Button fx:id="buttonShop" mnemonicParsing="false" onAction="#goToShop" onMouseEntered="#doThis2" onMouseExited="#doThat2" prefHeight="106.0" prefWidth="494.0" style="-fx-background-color: #99ccff;" text="Shop">
           <font>
-            <Font name="Hiragino Sans W2" size="46.0"/>
+            <Font name="Hiragino Sans W2" size="30.0" />
           </font>
         </Button>
-      </children>
-    </HBox>
+         </children>
+      </VBox>
   </children>
 </AnchorPane>
