--- a/src/main/resources/com/example/soberdn/UserShopScreen.fxml
+++ b/src/main/resources/com/example/soberdn/UserShopScreen.fxml
@@ -12,27 +12,25 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="672.0" prefWidth="1194.0" style="-fx-background-color: #ffffcc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.Bar.UserShopScreen">
+<AnchorPane prefHeight="672.0" prefWidth="1140.0" style="-fx-background-color: #ffffcc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.Bar.UserShopScreen">
    <children>
-      <HBox layoutX="-4.0" layoutY="-3.0" prefHeight="96.0" prefWidth="217.0" style="-fx-background-color: #80bfff;">
+      <HBox layoutX="-4.0" layoutY="-3.0" prefHeight="96.0" prefWidth="217.0" style="-fx-background-color: #80bfff;" />
+      <HBox layoutX="213.0" layoutY="-5.0" prefHeight="99.0" prefWidth="927.0" style="-fx-background-color: #99ccff;">
          <children>
-            <Label alignment="CENTER" prefHeight="98.0" prefWidth="221.0" style="-fx-background-color: #80bfff;" text="Shop">
+            <Label alignment="CENTER" prefHeight="97.0" prefWidth="935.0" style="-fx-background-color: #80bfff;" text="Shop">
                <font>
                   <Font name="Hiragino Sans W2" size="40.0" />
                </font>
             </Label>
-         </children>
-      </HBox>
-      <HBox layoutX="213.0" layoutY="-1.0" prefHeight="95.0" prefWidth="981.0" style="-fx-background-color: #99ccff;" />
+         </children></HBox>
       <VBox layoutX="-2.0" layoutY="93.0" prefHeight="579.0" prefWidth="215.0" style="-fx-background-color: #99ccff;">
          <children>
-            <Button fx:id="buttonBalance" mnemonicParsing="false" prefHeight="79.0" prefWidth="223.0" style="-fx-background-color: #99ccff;" text="Balance">
+            <Button fx:id="buttonBalance" mnemonicParsing="false" onAction="#buttonGoToBalance" onMouseEntered="#dark1" onMouseExited="#light1" prefHeight="79.0" prefWidth="223.0" style="-fx-background-color: #99ccff;" text="Balance">
                <font>
                   <Font name="Hiragino Sans W2" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="buttonQrCode" mnemonicParsing="false" prefHeight="79.0" prefWidth="229.0" style="-fx-background-color: #99ccff;" text="QR-Code">
+            <Button fx:id="buttonQrCode" mnemonicParsing="false" onAction="#buttonGoToQrCode" onMouseEntered="#dark2" onMouseExited="#light2" prefHeight="79.0" prefWidth="229.0" style="-fx-background-color: #99ccff;" text="QR-Code">
                <font>
                   <Font name="Hiragino Sans W2" size="20.0" />
                </font>
@@ -58,7 +56,7 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="18.0" prefWidth="94.0" text="Sparkling Water" />
-                  <Button fx:id="buttonWater" mnemonicParsing="false" text="1 Coin" />
+                  <Button fx:id="buttonWater" mnemonicParsing="false" onAction="#buttonOneCoin" text="1 Coin" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="178.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1">
@@ -69,7 +67,7 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="18.0" prefWidth="63.0" text="Sprite Can" />
-                  <Button fx:id="buttonSprite" mnemonicParsing="false" text="1 Coin" />
+                  <Button fx:id="buttonSprite" mnemonicParsing="false" onAction="#buttonOneCoin" text="1 Coin" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="213.0" prefWidth="241.0" spacing="10.0" GridPane.columnIndex="2">
@@ -80,7 +78,7 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="18.0" prefWidth="85.0" text="Heineken Can" />
-                  <Button fx:id="buttonHeineken" mnemonicParsing="false" text="2 Coins" />
+                  <Button fx:id="buttonHeineken" mnemonicParsing="false" onAction="#buttonTwoCoin" text="2 Coins" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.rowIndex="1">
@@ -91,7 +89,7 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="18.0" prefWidth="74.0" text="Becks Bottle" />
-                  <Button fx:id="buttonBecks" mnemonicParsing="false" text="2 Coins" />
+                  <Button fx:id="buttonBecks" mnemonicParsing="false" onAction="#buttonTwoCoin" text="2 Coins" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -102,7 +100,7 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="18.0" prefWidth="118.0" text="Long Island Cocktail" />
-                  <Button fx:id="buttonCock1" mnemonicParsing="false" text="3 Coins" />
+                  <Button fx:id="buttonCock1" mnemonicParsing="false" onAction="#buttonThreeCoin" text="3 Coins" />
                </children>
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="219.0" spacing="10.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -113,7 +111,7 @@
                      </image>
                   </ImageView>
                   <Label prefHeight="18.0" prefWidth="138.0" text="Tequila Sunrise Cocktail" />
-                  <Button fx:id="buttonCock2" mnemonicParsing="false" text="3 Coins" />
+                  <Button fx:id="buttonCock2" mnemonicParsing="false" onAction="#buttonThreeCoin" text="3 Coins" />
                </children>
             </VBox>
          </children>
