--- a/src/main/resources/com/example/soberdn/SecondSober.fxml
+++ b/src/main/resources/com/example/soberdn/SecondSober.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane fx:id="anchorPane" prefHeight="672.0" prefWidth="1099.0" style="-fx-background-color: #ffffcc;" stylesheets="@../../../../java/com/example/soberdn/css/stylesheet.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.FxmlCreatesSoberSecondScreen">
+<AnchorPane fx:id="anchorPane" prefHeight="672.0" prefWidth="1099.0" style="-fx-background-color: #ffffcc;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.soberdn.javafx.controllers.FxmlCreatesSoberSecondScreen">
    <children>
-      <HBox layoutX="-5.0" layoutY="-7.0" prefHeight="101.0" prefWidth="222.0" style="-fx-background-color: #80bfff;" stylesheets="/com/example/soberdn/css/stylesheet.css" />
+      <HBox layoutX="-5.0" layoutY="-7.0" prefHeight="101.0" prefWidth="222.0" style="-fx-background-color: #80bfff;" />
       <VBox layoutX="572.0" layoutY="166.0" prefHeight="377.0" prefWidth="215.0" spacing="30.0">
          <children>
             <ImageView fitHeight="201.0" fitWidth="244.0" pickOnBounds="true" preserveRatio="true">
@@ -20,7 +20,7 @@
                   <Image url="@../../../coin-royalty-free-stock-photography-illustration-gold-coin.png" />
                </image>
             </ImageView>
-            <Label alignment="CENTER" prefHeight="47.0" prefWidth="215.0" text="0">
+            <Label fx:id="coinCounter" alignment="CENTER" prefHeight="47.0" prefWidth="215.0" text="0">
                <font>
                   <Font name="Hiragino Sans W2" size="46.0" />
                </font>
