--- a/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
+++ b/src/main/resources/com/example/soberdn/SoberQrCodeScreen.fxml
@@ -43,5 +43,6 @@
         </Button>
          </children>
       </VBox>
+      <Button fx:id="buttonAddCoins" layoutX="167.0" layoutY="576.0" mnemonicParsing="false" onAction="#addCoins" prefHeight="115.0" prefWidth="942.0" style="-fx-background-color: #ffffcc;" />
   </children>
 </AnchorPane>
